--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -67,7 +67,7 @@
     font-style: italic;
 }
 
-.loginButton {
+.TwitterButton {
     background-color: #1DA1F2;
     color: white;
     justify-content: center;
@@ -85,4 +85,5 @@
 
 .bottomText {
     margin-top: 20px;
+    padding: 5px;
 }
