--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -87,3 +87,32 @@
     margin-top: 20px;
     padding: 5px;
 }
+.gamepagecontainer{
+    background-color: black;
+}
+.container {
+    background-color: white;
+}
+
+.submitModal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0.7);
+    opacity: 0.7;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+
+}
+
+.modal-content {
+    width: 150px;
+    height: 85px;
+    background-color: white;
+    border-radius: 5px;
+    padding-top: 20px;
+    align-items: center;
+}
