figured out export, added footer to gamepage

--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -121,3 +121,11 @@
     background-color: white;
     padding: 5px;
 }
+
+.footer {
+    position: relative;
+    background-color: darkgreen;
+    text-align: center;
+    color: white;
+
+}
