--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -97,7 +97,7 @@
 .submitModal {
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0.7);
+    background-color: rgba(0,0,0.9);
     opacity: 0.7;
     position: absolute;
     top: 0;
@@ -128,4 +128,14 @@
     text-align: center;
     color: white;
 
+}
+
+#currentPick {
+    padding-bottom: 5px;
+}
+
+#submitButton {
+    background-color: darkgreen;
+    color: white;
+    margin-left: 20px;
 }
