--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -73,11 +73,6 @@
     justify-content: center;
 }
 
-.GoogleButton {
-    background-color: #DB4437;
-    color: white;
-    justify-content: center;
-}
 
 .loginBottom {
     background-color: rgb(124, 124, 124);
@@ -123,7 +118,8 @@
 }
 
 .footer {
-    position: relative;
+    position: absolute;
+    width: 100%;
     background-color: darkgreen;
     text-align: center;
     color: white;
@@ -132,10 +128,49 @@
 
 #currentPick {
     padding-bottom: 5px;
+    text-align: center;
+    background-color: darkgreen;
+    color: white;
 }
 
 #submitButton {
     background-color: darkgreen;
     color: white;
     margin-left: 20px;
+    margin-bottom: 5px;
 }
+
+
+.sheet {
+    background-color: white;
+    width: 100%;
+    text-align: center;
+
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+}
+
+#userDetails {
+    background-color: black;
+    text-align: center;
+    color: white;
+    width: 100%;
+    padding: 5px;
+}
+
+.teamSelect {
+    background-color: lightgray;
+    align-items: center;
+}
+
+#submission {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+
